@@ -2,6 +2,7 @@ const PATCH_NOTES =
 	'2022/02/19\n' +
 	'• Slash command support for generating memes.\n' +
 	'• Emoji report can be ordered by most recent or most popular.\n' +
+	'• Fixed bug that interfered with reactions to funny numbers.\n' +
 	'2022/02/18\n' +
 	'• Slash command support for rolling dice.\n' +
 	'• Slash command support for reporting and resolving bugs.\n' +
