@@ -8,7 +8,7 @@ const run = ({messageText, sendMessage, react, channel}) => {
 }
 
 const sendNice = (channel, react, sendMessage) => {
-	const nice = channel?.guild?.emojis?.find?.(e => e.name === 'nice');
+	const nice = channel?.guild?.emojis?.cache?.find?.(e => e.name === 'nice');
 	if (nice) {
 		react(nice);
 	} else {
